<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Settings -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="1.5dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="10"
            android:background="#606090"
            android:orientation="horizontal"
            android:tag="configure block">

            <Button
                android:id="@+id/openButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_pattern"
                android:text="@string/open" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/baudRate"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="@string/baud_rate_str"
                    android:textColor="#ffffff" />

                <Spinner
                    android:id="@+id/baudSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1.8"
                    android:background="#68C7A6"
                    android:gravity="center_horizontal|center"
                    android:inputType="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stopBit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="@string/stop_bit"
                    android:textColor="#ffffff" />

                <Spinner
                    android:id="@+id/stopSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1.8"
                    android:background="#68C7A6"
                    android:gravity="center_horizontal|center"
                    android:inputType="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dataBit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="@string/data_bit"
                    android:textColor="#ffffff" />

                <Spinner
                    android:id="@+id/dataSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1.8"
                    android:background="#68C7A6"
                    android:gravity="center_horizontal|center"
                    android:inputType="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/parity"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="@string/parity_str"
                    android:textColor="#ffffff" />

                <Spinner
                    android:id="@+id/paritySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1.8"
                    android:background="#68C7A6"
                    android:gravity="center_horizontal|center"
                    android:inputType="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/flowControl"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|bottom"
                    android:text="@string/flow"
                    android:textColor="#ffffff" />

                <Spinner
                    android:id="@+id/flowSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1.8"
                    android:background="#68C7A6"
                    android:gravity="center"
                    android:inputType="none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/configButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_pattern"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:text="@string/config" />
            </LinearLayout>
        </LinearLayout>

        <!-- Read byte -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="1.5dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="15"
            android:background="#606090"
            android:orientation="horizontal"
            android:tag="Read block">

            <TextView
                android:id="@+id/ReadBytes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/read_bytes"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/readText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:background="#68C7A6"
                android:focusableInTouchMode="false"
                android:gravity="start|top"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_pattern"
                android:gravity="center"
                android:scaleType="centerInside"
                android:text="@string/clear" />
        </LinearLayout>

        <!-- Write byte -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="3dip"
            android:layout_weight="10"
            android:background="#606090"
            android:orientation="horizontal"
            android:tag="Write block">

            <TextView
                android:id="@+id/WriteBytes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/write_bytes"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/writeText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:background="#68C7A6"
                android:gravity="center_vertical"
                android:hint="@string/hint"
                android:maxLength="255" />

            <Button
                android:id="@+id/writeButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_pattern"
                android:gravity="center"
                android:scaleType="centerInside"
                android:text="@string/write" />
        </LinearLayout>
    </LinearLayout>
</layout>